Fix grid alignment

--- a/src/containers/PageBuilder/SectionBuilder/SectionFooter/SectionFooter.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionFooter/SectionFooter.module.css
@@ -34,7 +34,7 @@
   grid-area: grid;
   display: grid;
   justify-content: center;
-  align-content: end;
+  align-content: start;
   grid-auto-rows: auto;
   grid-gap: 32px;
 }
